# spacy-libs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yaml
spacy-conf/: Cargo.toml
spacy-macros/: Cargo.toml
spacy-macros/spacy-macros_derive/: Cargo.toml
spacy-macros/spacy-macros_derive/src/: lib.rs
spacy-macros/src/: lib.rs
spacy-macros/tests/: test_macro.rs
spacy-postgres/: Cargo.toml
spacy-postgres/migrations/: 000_create_example_table.sql  001_add_record.sql
spacy-postgres/src/: errors.rs  lib.rs
