[package]
name = "spacy-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.35.0", features = ["test-util", "tokio-macros", "macros", "rt-multi-thread"] }
