[package]
name = "spacy_macros_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.86", features = ["proc-macro"] }
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full", "extra-traits", "printing", "derive"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
